--- a/public/css/main.css
+++ b/public/css/main.css
@@ -597,3 +597,32 @@ padding:5px;
 .handover:hover{
 	color: #000;
 }
+
+.error{
+	color:red;
+	padding: 3px;
+	font-size: 15px;
+}
+
+::-webkit-scrollbar {
+    width: 6px;
+    height: 10px;
+}
+ 
+/* Track */
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 1px rgba(0,0,0,0.3); 
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: #ccc; 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+::-webkit-scrollbar-thumb:window-inactive {
+	background: rgba(255,0,0,0.4); 
+}
