--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,6 +6,7 @@
 */
 #example-navbar-collapse{z-index:1;background:#698AB5;}.fav-bg-grad{background:-webkit-linear-gradient(45deg,#020031 0,#6d3353 100%);background:linear-gradient(45deg,#020031 0,#6d3353 100%);background:-moz-linear-gradient(45deg,#020031 0,#6d3353 100%)}.fav-bg-grad1{background:linear-gradient(145deg,#622991 0,#3494e0 100%);background:-webkit-linear-gradient(145deg,#622991 0,#3494e0 100%);background:-moz-linear-gradient(145deg,#622991 0,#3494e0 100%)}.fav-bg-sing{background:#6f5499}.opacity{opacity:.8}.dropdown-menu li{background:#EEE}.box{border-right:1px solid #ccc}.box h1{text-decoration:underline}.foot-fixed-bottom{padding:10px;background:#EEE}.foot-fixed-bottom p{color:#000;font-size:14px;margin:0 12px 15px}.footer{width:100%!important}//POPREG .login_modal_footer{margin-top:5px}.login_modal_header .modal-title{text-align:center;font-family:Philosopher,sans-serif}.form-group .login-field-icon{font-size:20px;position:absolute;right:15px;top:3px;transition:all .25s ease 0s;padding-top:2%}.login-modal{width:100%;padding-bottom:20px}.hide{display:none}body{-webkit-background-size:cover;-moz-background-size:cover;-o-background-size:cover;background-size:cover}@keyframes myfirst{from{transform:rotateY(0deg);-webkit-transform:rotateY(0deg)}to{transform:rotateY(360deg);-webkit-transform:rotateY(360deg)}}@-webkit-keyframes myfirst{from{transform:rotateY(0deg);-webkit-transform:rotateY(0deg)}to{transform:rotateY(360deg);-webkit-transform:rotateY(360deg)}}.flip{animation:myfirst 1s;-webkit-animation:myfirst 1s}.login_modal_footer,.login_modal_header{background:#EEE!important;color:#078DC6}.modal-register-btn{margin:4% 33% 2%;width:100%}.login-modal input{height:40px;box-shadow:none;border:1px solid #ddd}.modal-body-left{float:left;width:50%;padding-right:4%;border-right:4px solid #ddd}.modal-body-right{float:right;width:47%}.login-link{padding:0 20%}.modal-social-icons{padding:0 10%}.facebook,.google,.linkedin,.twitter{width:100%;height:40px;padding-top:2%;margin-top:2%}.modal-icons{margin-left:-10px;margin-right:20px}.google,.google:hover{background-color:#dd4b39!important;border:2px solid #dd4b39;color:#fff!important}.facebook,.facebook:hover{background-color:#3b5999!important;border:2px solid #3b5999;color:#fff!important}.linkedin,.linkedin:hover{background-color:#007bb6;border:2px solid #007bb6;color:#fff}#social-icons-conatainer{position:relative}#center-line{position:absolute;right:48%;top:80px;background:#ddd;border:4px solid #DDD;border-radius:20px}.modal-login-btn{width:100%;height:40px;margin-bottom:10px}#login-form-error{padding-top:7px}
 
+
 @font-face {
       font-family: 'open';
       src: url(../font/open.ttf) format('truetype');
@@ -110,17 +111,19 @@ text-transform:uppercase;
 border-radius: 0;
 -moz-border-radius: 0;
 -webkit-border-radius: 0;
-font-weight:600;
+font-weight:bolder;
+letter-spacing:1px;
 margin:20px 0 0 0;
 padding:9px 20px;
 font-family: 'Open Sans', sans-serif;
-border:none;
+border:1px solid #215390;
 transition: all 0.3s ease 0s;
 }
 .search-btn:hover, .btn-default:hover{
 background:#215390;
 color:#fff;
-border:none;
+border:1px solid #eccf6f;
+box-shadow: 0px 2px 3px #666;
 }
 .padding-6{
 padding:6px;
@@ -166,7 +169,6 @@ border-radius:0px;
 border:1px solid #f7e094;
 -webkit-box-shadow:none;
 -moz-box-shadow:none;
-box-shadow: 1px 1px 15px #EEE;
 color:#000;
 font-size:14px;
 height:auto;
@@ -562,9 +564,13 @@ padding:5px;
 	border-color: #DED7EB;
 }
 .panel-info>.panel-heading{
-	background: #F7E7CE	;
-	border-color: #ccc;
-	color:#777;
+	background: #214290	;
+	border-color: #214290;
+	color:#FFF;
+}
+.panel-info>.panel-heading:hover
+{
+	color:#ccc;
 }
 .panel-success>.panel-heading{
 	background: #BDADC6;
@@ -669,4 +675,33 @@ padding:5px;
 
 .fa-facebook,.fa-twitter{
 	color:#fff;
+}
+#left_nav li.list-group-item.active
+{
+	background: #444;
+	border-right: 0px solid #fff;
+}
+#left_nav li.list-group-item
+{
+	font-size: 18px;
+}
+#left_nav li.list-group-item.active a,#left_nav li.list-group-item.active i{
+	color: #fff !important;
+}
+.list-group{
+	border-radius: 0px !important;
+}
+.list-group-item:first-child,.list-group-item:last-child
+{
+	border-radius: 0px;	
+}
+.arrow{
+	position: relative;
+	width: 0; 
+	height: 0; 
+	border-top: 12px solid transparent;
+	border-bottom: 12px solid transparent; 
+	float: right;
+	margin-right: -16px;
+	border-right:11px solid #fff; 
 }
